--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #0b2638;
   background: linear-gradient(160deg, #0b2638 0%, #030c12 100%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+
 }
 
 #root {
